.provarCaches/00D5f000005vwGkEAI/objects/rstk__porcti__c.object
<CustomObject>
    <description>porcti__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT((rstk__porcti_sowarr__r.Name &amp; &apos; (&apos; &amp; TEXT( rstk__porcti_date__c ) &amp; &apos;)&apos;), 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_bwqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Copies - BW</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_colqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Copies - Color</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>RCTI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_dateprocessed__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_message__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Processing Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_pohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Desired Purchase Order</inlineHelpText>
        <label>Purchase Order Header</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>Recipient Created Tax Invoice API</relationshipLabel>
        <relationshipName>porctis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_polinebw__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Line - BW</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Recipient Created Tax Invoice API</relationshipLabel>
        <relationshipName>porctis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_polinecol__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Line - Color</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Recipient Created Tax Invoice API (PO Line - Color)</relationshipLabel>
        <relationshipName>Recipient_Created_Tax_Invoice_API</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_polinescan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Line - Scan</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Recipient Created Tax Invoice API (PO Line - Scan)</relationshipLabel>
        <relationshipName>Recipient_Created_Tax_Invoice_API1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_poloaderbw__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Loader - BW</label>
        <referenceTo>rstk__poloader__c</referenceTo>
        <relationshipLabel>Recipient Created Tax Invoice API</relationshipLabel>
        <relationshipName>porctis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_poloadercol__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Loader - Color</label>
        <referenceTo>rstk__poloader__c</referenceTo>
        <relationshipLabel>Recipient Created Tax Invoice API (PO Loader - Color)</relationshipLabel>
        <relationshipName>Recipient_Created_Tax_Invoice_API</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_poloaderscan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Loader - Scan</label>
        <referenceTo>rstk__poloader__c</referenceTo>
        <relationshipLabel>Recipient Created Tax Invoice API (PO Loader - Scan)</relationshipLabel>
        <relationshipName>Recipient_Created_Tax_Invoice_API1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_scanqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Scans</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Covered Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Recipient Created Tax Invoice API</relationshipLabel>
        <relationshipName>porctis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcti_status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>Queued For Processing</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__RS_Recipient_Created_Tax_Invoice_API</fullName>
        <columns>NAME</columns>
        <columns>rstk__porcti_pohdr__c</columns>
        <columns>rstk__porcti_date__c</columns>
        <columns>rstk__porcti_status__c</columns>
        <columns>rstk__porcti_sowarr__c</columns>
        <columns>rstk__porcti_dateprocessed__c</columns>
        <columns>rstk__porcti_bwqty__c</columns>
        <columns>rstk__porcti_colqty__c</columns>
        <columns>rstk__porcti_scanqty__c</columns>
        <columns>rstk__porcti_poloaderbw__c</columns>
        <columns>rstk__porcti_poloadercol__c</columns>
        <columns>rstk__porcti_poloaderscan__c</columns>
        <columns>rstk__porcti_message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Recipient Created Tax Invoice API</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>